<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>top</artifactId>
        <groupId>io.github.neodix42</groupId>
        <version>0.4.0</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>mnemonic</artifactId>
    <name>TON Java Mnemonic</name>

    <description>Help quickly generate and part TON compatible mnemonics.</description>

    <url>https://github.com/neodiX42/ton4j</url>

    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>neodiX</name>
            <email>neodiX@ton.org</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/neodiX42/ton4j.git</connection>
        <developerConnection>scm:git:ssh://github.com/neodiX42/ton4j.git</developerConnection>
        <url>https://github.com/neodiX42/ton4j/tree/main</url>
    </scm>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.70</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>